# atproto-validator-rs

./: Cargo.toml  README.md
src/: atrium.rs  error.rs  lib.rs  string_format.rs
src/atrium/: canonicalize.rs  string_format.rs  validate.rs
tests/: deserialize-files.rs  json-validation.rs  non-json-validation.rs  validate.rs
tests/lexicons/: mod.rs
tests/lexicons/query/: app.bsky.actor.getProfile.json
tests/lexicons/record/: app.bsky.actor.profile.json  xyz.statusphere.status.json
tests/objects/: profile-with-bad-pinned.json  profile-with-pinned.json  profile.json  status-bad.json  status.json
