[package]
edition = "2024"
name = "atproto-validator"
version = "0.1.0"

[dependencies]
atrium-api = {version = "0.25"}
atrium-lex = {git = "https://github.com/atrium-rs/atrium.git", rev = "29b42eb2792adc94c5ce1305b14eb5679d05d91c", optional = true}
chrono = {version = "0.4"}
ipld-core = {version = "0.4"}
regex = {version = "1"}
serde = {version = "1"}
serde_json = {version = "1", optional = true}
thiserror = {version = "1"}
unicode-segmentation = {version = "1"}

[dev-dependencies]
serde_json = {version = "1"}

[features]
default = ["json"]
json = ["dep:serde_json"]
